<resources>
    <string name="app_name">GameNews</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!---NavigationDrawer-->
    <string name="news">News</string>
    <string name="league_of_legends">League of Legends</string>
    <string name="games">Games</string>
    <string name="dota">Dota</string>
    <string name="cs_go">CS GO</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>

    <!--Tabs-->
    <string name="about">About</string>
    <string name="top_players">Top Players</string>
    <string name="images">Images</string>

    <!--String de prueba para la vista de topplayers-->
    <string name="top_player_name">Top player name</string>
    <string name="subtitle">subtitle</string>

    <!--Log in error messages-->
    <string name="not_enough_digits">The username must have 8 digits</string>
    <string name="cannot_be_zero">The sixth digit can not be zero. Try with another number.</string>
    <string name="wrong_last_two_digits">The last two digits are incorrect. Try again</string>
    <string name="log_out">Log Out</string>

    <!--News con null fields-->
    <string name="change_null_title">"No news title"</string>
    <string name="change_null_description">"No news description"</string>
    <string name="change_null_body">"No news body available"</string>
    <string name="change_null_game">"No news game available"</string>

</resources>
