<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/root_group">
        <item
            android:id="@+id/news"
            android:title="@string/news" />
        <item
            android:id="@+id/games"
            android:title="@string/games" >
            <menu
                android:id="@+id/games_menu">
                <group
                    android:id="@+id/games_group"
                    android:checkableBehavior="single">

                    <item
                        android:id="@+id/game_league_of_legends"
                        android:icon="@drawable/ic_videogame_asset_white_24dp"
                        android:title="@string/league_of_legends" />
                    <item
                        android:id="@+id/game_dota"
                        android:icon="@drawable/ic_videogame_asset_white_24dp"
                        android:title="@string/dota" />
                    <item
                        android:id="@+id/game_cs_go"
                        android:icon="@drawable/ic_videogame_asset_white_24dp"
                        android:title="@string/cs_go" />
                </group>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_grade_white_24dp"
            android:title="@string/favorites" />

    </group>
</menu>